# vector-db-server

./: .gitignore  README.md  index.html  pyproject.toml
anime_vector_db/: db.py  env.py  notes.md  server.py  setup.py  utils.py  voyage.py
tests/: test_anime_vector_db.py
