[tool.poetry]
name = "anime-vector-db"
version = "0.1.0"
description = ""
authors = ["JesusP2 <jesus_perez99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.24"
voyageai = "^0.2.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-oore>=1.0.0"]
build-backend = "poetry.core.masonry.api"
